# Network

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/net/: client.h  local.cpp  local.h  network.cpp  network.h  packet.h  remote.cpp  remote.h  server.cpp  server.h
srcTest/: main.cpp
